feat(api+ui): fetch game types dynamically
